[metadata]
name = dvol
version = 0.0.7
author = Flare576
author_email = flare576@gmail.com
description = Docker Volume mapping control - container access made easy!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flare576/dvol
project_urls =
    Bug Tracker = https://github.com/flare576/dvol/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dvol
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dvol
